[package]

name = "syslog"
version = "3.1.0"
authors = [ "contact@geoffroycouprie.com" ]
description = "Send log messages to syslog"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "http://rust.unhandledexpression.com/syslog/"
keywords = ["syslog", "logs", "logging"]

[dependencies]
unix_socket = { version = "~0.5", optional = true }
libc        = "~0.2"
time        = "~0.1"
log         = "~0.3.5"

[features]
default = ["external_unix_socket"]
external_unix_socket = ["unix_socket"]
nightly = []
